--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "target": "es6",
       "moduleResolution": "node",
       "sourceMap": true,
-      "outDir": "dist",
+      "outDir": "lib",
       "lib": ["es2015"],
       "sourceRoot": "src",
       "rootDirs": ["src"],
