--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "ejs": "^3.1.6",
     "express": "^4.16.4",
     "module-alias": "^2.2.2",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "path-to-regexp": "^6.2.0",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/ejs": "^3.0.6",
